--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 
 <body>
-  <a href = "PrindeBerea/index.html" style = "text-decoration: none" ><p> PrindeBerea </p> </a>
-  <a href = "GameAwards/index.html" style = "text-decoration: none" ><p> GameAwards </p> </a>
+  <a href = "https://adin3.github.io/PrindeBerea/" style = "text-decoration: none" ><p> PrindeBerea </p> </a>
+  <a href = "https://adin3.github.io/GameAwards/" style = "text-decoration: none" ><p> GameAwards </p> </a>
 
 </body>
 
