--- a/PrindeBerea/index.html
+++ b/PrindeBerea/index.html
@@ -7,11 +7,9 @@
 
 
 <body>
-	<div class = "logo">
-		<img src = "logo1.png">
-	</div>
+	<img class = "logo" src = "logo1.png">
 
-	<a href = "Alegere/index.html" style = "text-decoration: none" ><p> Alege Nivelul </p> </a>
-	<p> About </p>
+	<a href = "Alegere/index.html" style = "text-decoration: none" ><p> Start </p> </a>
+	<a href = "About/index.html" style = "text-decoration: none" ><p> About </p> </a>
 </body>
 </html>
