--- a/Ecotron/index.html
+++ b/Ecotron/index.html
@@ -7,7 +7,9 @@
 
 
 <body>
-	<img class = "logo" src = "logo.png">
+	<img class = "logo" src = "img/logo.png">
+	
+	<a href="img/imagine.txt" download> <img class = "descarca" src="img/descarca.png"> </img> </a>
 	
 </body>
 </html>
