--- a/Ecotron/index.html
+++ b/Ecotron/index.html
@@ -10,6 +10,8 @@
 	<img class = "logo" src = "img/logo.png">
 	
 	<a href="img/imagine.txt" download> <img class = "descarca" src="img/descarca.png"> </img> </a>
+	<a href="info.html" download> <img class = "informatii" src="img/informatii.png"> </img> </a>
+	
 	
 </body>
 </html>
