--- a/Ecotron/index.html
+++ b/Ecotron/index.html
@@ -2,16 +2,13 @@
 <head>
 	<title> Ecotron </title>
 	<link rel="stylesheet" href="style.css">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
 <body>
-	<img class = "logo" src = "img/logo.png">
-	
-	<a href="img/imagine.txt" download> <img class = "descarca" src="img/descarca.png"> </img> </a>
-	<a href="info.html" download> <img class = "informatii" src="img/informatii.png"> </img> </a>
-	
-	
+	<img id="logo" src="img/logo.png">
+	<a href="Ecotron.zip" download><img class="descarca" src="img/descarca.png"></a>
+	<a href="info.html"><img class="informatii" src="img/informatii.png"></a>
 </body>
 </html>
