virus threat removed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <a href = "https://adin3.github.io/PrindeBerea/" style = "text-decoration: none" ><p> PrindeBerea </p> </a>
   <a href = "https://adin3.github.io/GameAwards/" style = "text-decoration: none" ><p> GameAwards </p> </a>
+  <a href = "https://adin3.github.io/Ecotron/" style = "text-decoration: none" ><p> Ecotron </p> </a>
 
 </body>
 
